Refactored for better function naming, moved start quiz logic, added a displayStartMessage function that sets up the button

--- a/index.html
+++ b/index.html
@@ -14,12 +14,7 @@
         <section id="time-left"></section>
         <section id="score"></section>
     </header>
-    <main>
-        <h1>Coding Quiz Challenge</h1>
-        <p>This is a timed, multiple choice quiz to test your knowledge of some basic coding concepts.</p>
-        <p>You will have 60 seconds to answer 10 multiple choice questions, but be careful--incorrect answers will subtract 10 seconds from your score!</p>
-        <button id="start">Start Quiz!</button>
-    </main>
+    <main> </main>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
