Added logic for displaying questions, end message, testing answers, and displaying the scoreboard

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <a id="nav-toggle" href="#scoreboard">View the scoreboard</a>
+        <a id="nav-toggle" href="#leader-board">View the leader board</a>
         <section id="time-left"></section>
-        <section id="score"></section>
+        <section id="score-board"></section>
     </header>
     <main> </main>
     <script src="./assets/js/script.js"></script>
