Added styling, refactored some names, added comment  from tutoring session about better event listener handling

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 <body>
     <header>
-        <a id="nav-toggle" href="#leader-board">View the leader board</a>
-        <section id="time-left"></section>
-        <section id="score-board"></section>
+        <a id="nav-toggle" href="#high-scores">View high scores</a>
+        <section>
+            <section id="time-left"></section>
+            <section id="score-board"></section>
+        </section>
     </header>
-    <main> </main>
+    <main></main>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
